# llm-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/appendix-A/01_main-chapter-code/: code.ipynb  exercise.ipynb  gradient-descent.ipynb
notebooks/ch-02/01_main-chapter-code/: ch02.ipynb
src/llm_from_scratch/: __init__.py
src/llm_from_scratch/ch-01/: __init__.py  tokenizer.py
src/llm_from_scratch/ch-02/: __init__.py  model.py
src/llm_from_scratch/ch_01/: __init__.py
src/llm_from_scratch/ch_02/: __init__.py  gpt_dataset.py  run.py  text_file.py  tokenizer.py
src/llm_from_scratch/data/: sample.txt
