[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Learning repository for building a Large Language Model from scratch"
authors = [
    {name = "Mustafa Abuelfadl", email = "mustafa@zidan.me"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "matplotlib>=3.10.6",
    "tiktoken>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "notebook>=7.4.7",
    "voila>=0.5.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = "."
include = ["llm_from_scratch*"]

[dependency-groups]
dev = [
    "notebook>=7.4.7",
]

[project.urls]
Homepage = "https://github.com/mustafa-zidan/llm-from-scratch"
Repository = "https://github.com/mustafa-zidan/llm-from-scratch"
"Bug Tracker" = "https://github.com/mustafa-zidan/llm-from-scratch/issues"
